# ZeroBuilder

./: .gitignore  CLAUDE.md  ENHANCED_VALIDATION_SUMMARY.md  PLAN.md  README.md  RESULTS_SUMMARY.md  SESSION_CONTEXT.md  UNKNOWN_VULNERABILITY_DISCOVERY_REPORT.md  llm_loop_script.py  pyproject.toml  session_backup_session_1751039769.json  step2_results_1751639406.json  test_step2_simple.py  validation_results_final_session_1751039769.json  validation_summary_session_1751039769.md
deployment/: budget_monitor.py  instance_cleanup.sh  pre_destroy_export.sh  validation_runner.py  vast_setup.sh
docs/: ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  README.md  RESEARCH_RESULTS.md  ROADMAP.md
docs/architecture/: HYBRID_SYSTEM_ARCHITECTURE.md
docs/guides/: DEPLOYMENT_CHECKLIST.md  ENHANCED_VALIDATION_USAGE_GUIDE.md  GEMINI_USAGE_GUIDE.md
docs/infrastructure/: INFRASTRUCTURE_PLAN.md  LOCAL_TESTING_ARCHITECTURE.md
docs/planning/: AI_COMMUNICATION_CLARIFICATION.md  GEMINI_INTEGRATION_STRATEGY.md  PLAN_COMPREHENSIVE.md  PLAN_v0.1_CORE_ONLY.md  V0.1_IMPLEMENTATION_DECISION.md
docs/research/: COMPREHENSIVE_VULNERABILITY_DISCOVERY.md  GAT_RESULTS.md  GEMINI_DISCUSSION_ANALYSIS.md  GEMINI_LOCAL_INTEGRATION_ANALYSIS.md  NOVEL_VULNERABILITY_DISCOVERY.md
docs/status/: AFL_INTEGRATION_COMPLETE.md  FREE_MULTI_LLM_VALIDATION_COMPLETE.md  (+5 more)
logs_archive/: session_backup_session_1751633500.json  validation_results_final_session_1751633500.json  validation_results_intermediate_session_1751633500.json  validation_summary_session_1751633500.md
src/: __init__.py
test_cases/: kernel_race_vulnerabilities.c  smb_new_testcases.c  smb_protocol_vulnerabilities.c
tests/: test_aflpp_integration.py  test_discovery_standalone.py  test_enhanced_smb_detector.py  test_smb_cve_detector.py  test_smb_cve_simple.py  test_unified_discovery.py
tools/: create_architecture_diagram.py
validation_systems/: README.md  cpu_multi_llm_system.py  enhanced_validation_system.py  gemini_integration.py  local_llm_manager.py  production_validation_system.py  system_validation_summary.md  test_complete_system_validation.py  test_gemini_enhanced_system.py  test_simple_local_llm.py
worklog/: README.md
(+59 files in other folders)
