[project]
name = "zerobuilder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "featuretools==1.31",
    "setuptools>=80.9.0",
    "stable-baselines3==2.2.1",
    "torch==2.3",
    "torch-cluster>=1.6.3",
    "torch-scatter>=2.1.2",
    "torch-sparse>=0.6.18",
    "torch-spline-conv>=1.2.2",
    "torchaudio>=2.3.0",
    "torchvision>=0.18.0",
    "xgboost==2.1",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
